--- a/Deutsch/Barock/index.html
+++ b/Deutsch/Barock/index.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Informationen zum Barock</title>
-
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Der Barock</h1>
-        <div>
-            <h2>DATA</h2>
-            <h3>DATA</h3>
-            <h4>DATA</h4>
-            <b>DATA</b>
-            <p>DATA</p>
-        </div>
-    </body>
-    <footer>
-        <p>Copyright &copy; 2024 Stefan Ahle, Benjamin Braun & Niklas Billmair</p>
-    </footer>
+	<head>
+		<title>Informationen zum Barock</title>
+	<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<header>
+			<h1>Die Epoche "Barock"</h1>
+		</header>
+		<div id="main-container">
+			<div id="headingBar">
+				<h1>BAROCK</h1>
+			</div>
+			<div id="poleContainer">
+				<div id="pole1" class="pole">
+					<h2>Bekannte Vertreter</h2>
+					<p>Johan Valentin Andreae (1586-1654)</p>
+					<p>Jakob Bidermann (1578-1639)</p>
+					<p>Sigmund von Birken (1626-1686)</p>
+					<p>Jakob Böhme (1575-1624)</p>
+					<p>Anton Ulrich von Braunschweig (1633-1714)</p>
+					<p>Paul Fleming (1609-1640)</p>
+					<p>Anna Rupertina Fuchs (1657-1722)</p>
+					<p>Paul Gerhardt (1607-1676</p>
+				</div>
+				<div id="pole2" class="pole">
+					<p>Lorem ipsum und so...</p>
+				</div>
+				<div id="pole3" class="pole">
+					<p>Lorem ipsum und so...</p>
+				</div>
+				<div id="pole4" class="pole">
+					<p>Lorem ipsum und so...</p>
+				</div>
+			</div>
+			<div id="lowerBar">
+				<p>Lorem ipsum und so...</p>
+			</div>
+		</div>
+	</body>
+	<footer>
+	<p>Copyright &copy; 2024 Stefan Ahle, Benjamin Braun & Niklas Billmair</p>
+	</footer>
 </html>
