--- a/Deutsch/Barock/poster.html
+++ b/Deutsch/Barock/poster.html
@@ -43,7 +43,7 @@
 			function headingBar(){
 				ee += 1;
 				if(ee == 4){
-					document.getElementById("main-container").innerHTML = "<img src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3RwLNsvARAhw4hxAY5wl0Yn4ZNb1U6O-2HQ&s\">";	
+					document.getElementById("main-container").innerHTML = "<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3RwLNsvARAhw4hxAY5wl0Yn4ZNb1U6O-2HQ&s">";	
 				}
 			}
 			function pole1(){
