--- a/Deutsch/Barock/pole1.html
+++ b/Deutsch/Barock/pole1.html
@@ -2,3 +2,29 @@
 <link rel="stylesheet" href="iframe.css">
 <h2>Bekannte Vertreter</h2>
 
+<h3>Johan Valentin Andreae</h3>
+<p></p>
+
+<h3>Jakob Bidermann</h3>
+<p></p>
+
+<h3>Sigmund von Birken</h3>
+<p></p>
+
+<h3>Jakob Böhme</h3>
+<p></p>
+
+<h3>Anton Ulrich von Braunschweig</h3>
+<p></p>
+
+<h3>Paul Fleming</h3>
+<p></p>
+
+<h3>Anna Rupertina Fuchs</h3>
+<p></p>
+
+<h3>Paul Gerhardt</h3>
+<p></p>
+
+<h3>Andreas Gryphius</h3>
+<p></p>
