--- a/Deutsch/Barock/index.html
+++ b/Deutsch/Barock/index.html
@@ -48,10 +48,16 @@
 				</div>
 				<div id="pole4" class="pole" onclick="pole4()">
 					<h2>Beispielwerke</h2>
+					<p>Buch von der Dutschen Poetery (Opitz, 1624)</p>
+					<p>Tränen des Vaterlands (Gryphius, 1658)</p>
+					<p>Es ist alles eitel (Gryphius, 1637)</p>
+					<p>Sonn- und Feiertagssonette (Gryphius, 1639)</p>
+					<p>Ibrahim (Lohenstein, 1650)</p>
+					<p>Cleopatra (Lohenstein, 1661)</p>
 				</div>
 			</div>
 			<div id="lowerBar" onclick="lowerBar()">
-				<p>Lorem ipsum und so...</p>
+				<img src="lorem ipsum deine mutter" alt="Error occurred while trying to load the image!">
 			</div>
 		</div>
 		<script>
@@ -65,27 +71,27 @@
 				}
 			}
 			function pole1(){
-				normalHTML = document.getElementById("main-container").innerHTML;
+				//normalHTML = document.getElementById("main-container").innerHTML;
 				document.getElementById("main-container").innerHTML = "<div id=\"headingBar\" onclick=\"headingBar()\"><h1>BAROCK</h1></div><div id=\"pole1\"><iframe src=\"pole1.html\"></div>";
 			}
 			function pole2(){
-				normalHTML = document.getElementById("main-container").innerHTML;
+				//normalHTML = document.getElementById("main-container").innerHTML;
 				document.getElementById("main-container").innerHTML = "<div id=\"headingBar\" onclick=\"headingBar()\"><h1>BAROCK</h1></div><div id=\"pole1\"><iframe src=\"pole2.html\"></div>";
 			}
 			function pole3(){
-				normalHTML = document.getElementById("main-container").innerHTML;
+				//normalHTML = document.getElementById("main-container").innerHTML;
 				document.getElementById("main-container").innerHTML = "<div id=\"headingBar\" onclick=\"headingBar()\"><h1>BAROCK</h1></div><div id=\"pole1\"><iframe src=\"pole3.html\"></div>";
 			}
 			function pole4(){
-				normalHTML = document.getElementById("main-container").innerHTML;
+				//normalHTML = document.getElementById("main-container").innerHTML;
 				document.getElementById("main-container").innerHTML = "<div id=\"headingBar\" onclick=\"headingBar()\"><h1>BAROCK</h1></div><div id=\"pole1\"><iframe src=\"pole4.html\"></div>";
 			}
 			function lowerBar(){
-				normalHTML = document.getElementById("main-container").innerHTML;
+				//normalHTML = document.getElementById("main-container").innerHTML;
 				document.getElementById("main-container").innerHTML = "<div id=\"headingBar\" onclick=\"headingBar()\"><h1>BAROCK</h1></div><div id=\"pole1\"><iframe src=\"lowerBar.html\"></div>";
 			}
 			function help(){
-				normalHTML = document.getElementById("main-container").innerHTML;
+				//normalHTML = document.getElementById("main-container").innerHTML;
 				document.getElementById("main-container").innerHTML = "<div id=\"headingBar\" onclick=\"headingBar()\"><h1>BAROCK</h1></div><div id=\"pole1\"><iframe src=\"help.html\"></div>";
 			}
 		</script>
