--- a/Deutsch/Barock/pole1.html
+++ b/Deutsch/Barock/pole1.html
@@ -2,29 +2,29 @@
 <link rel="stylesheet" href="iframe.css">
 <h2>Bekannte Vertreter</h2>
 
-<h3>Johan Valentin Andreae</h3>
-<p></p>
+<h3>Johann Valentin Andreae</h3>
+<p>Johann Valentin Andreae (* 17. August 1586 in Herrenberg; † 27. Juni 1654 in Stuttgart) war ein deutscher Theologe, Schriftsteller und Mathematiker mit großem Einfluss auf den Protestantismus im Herzogtum Württemberg. Er gilt als einer der Urheber der Rosenkreuzer-Legende und wahrscheinlicher Verfasser der Legende von Christian Rosenkreutz.</p>
 
 <h3>Jakob Bidermann</h3>
-<p></p>
+<p>Jakob Bidermann S.J. (* 1578 in Ehingen (Donau); † 20. August 1639 in Rom) war ein jesuitischer Dichter und Dramatiker des Barock. </p>
 
 <h3>Sigmund von Birken</h3>
-<p></p>
+<p>Sigmund von Birken (auch Sigismund von Birken; * 25. April 1626 in Wildstein, Elbogener Kreis; † 12. Juni 1681 in Nürnberg, Fränkischer Reichskreis) war ein protestantischer deutscher Dichter, Schriftsteller und Übersetzer des Barock, Mitglied unter anderem des Pegnesischen Blumenordens zu Nürnberg und der Fruchtbringenden Gesellschaft, des sog. Palmenordens. </p>
 
 <h3>Jakob Böhme</h3>
-<p></p>
+<p>Jakob Böhme, zeitgenössisch Jacob Böhme, (* 1575 in Alt Seidenberg bei Görlitz; † 17. November 1624 in Görlitz) war ein deutscher Mystiker, Philosoph und christlicher Theosoph. Georg Wilhelm Friedrich Hegel nannte ihn den „ersten deutschen Philosophen“, weil er als erster philosophische Werke in deutscher Sprache verfasste. </p>
 
 <h3>Anton Ulrich von Braunschweig</h3>
-<p></p>
+<p>Anton Ulrich Prinz von Braunschweig-Wolfenbüttel (* 28. August 1714 in Bevern; † 4. Mai 1774 in Cholmogory) war ein Sohn Ferdinand Albrechts II., Fürst von Braunschweig-Wolfenbüttel-Bevern. Er war als Ehemann der Regentin Anna Leopoldowna von 1740 bis 1741 Generalissimus der russischen Armee.</p>
 
 <h3>Paul Fleming</h3>
-<p></p>
+<p>Paul Fleming (* 5. Oktober 1609 in Hartenstein (Sachsen); † 2. April 1640 in Hamburg) war ein deutscher Arzt und Schriftsteller. Er gilt als einer der bedeutendsten Lyriker der deutschen Barockliteratur. </p>
 
 <h3>Anna Rupertina Fuchs</h3>
-<p></p>
+<p>Anna Rupertina Fuchs (geborene von Pleitner; * 19. Dezember 1657 Elbing, Polnisch-Preußen; † 23. November 1722 in Sulzbach, Pfalz-Sulzbach) war eine deutsche Lyrikerin und Dramatikerin.</p>
 
 <h3>Paul Gerhardt</h3>
 <p></p>
 
 <h3>Andreas Gryphius</h3>
-<p></p>
+<p>Paul Gerhardt (* 12. Märzjul. / 22. März 1607greg. in Gräfenhainichen; † 27. Maijul. / 6. Juni 1676greg. in Lübben) war ein evangelisch-lutherischer Theologe und gilt als einer der bedeutendsten deutschsprachigen Kirchenlieddichter.</p>
