--- a/Deutsch/Barock/pole2.html
+++ b/Deutsch/Barock/pole2.html
@@ -1,3 +1,32 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="iframe.css">
-<p>Stefan stinkt.</p>
+<h2>Die Lyrik</h2>
+<p>Die Lyrik ist eine der drei grundlegenden literarischen Gattungen, neben Epik und Dramatik.</p>
+<h4>Definition und Merkmale der Lyrik</h4>
+<p>Lyrik bezeichnet literarische Texte, die in Gedichtform verfasst sind.</p>
+<p>Sie zeichnet sich durch ihre kompakte Sprache, Bildhaftigkeit und Rhythmus aus.</p>
+<p>Lyrische Texte können verschiedene Formen annehmen, wie Sonette, Haikus, Oden, Balladen und mehr.</p>
+<h4>Unterscheidungskriterien</h4>
+<p>Redekriterium: In lyrischen Texten findet man oft Einzelreden, während dramatische Texte Wechselreden enthalten und epische Texte sowohl Erzähler- als auch Figurenrede aufweisen können.</p>
+<h2>Die Epik</h2>
+<p>Die Epik ist eine der drei großen literarischen Gattungen neben der Lyrik und der Dramatik. Sie umfasst erzählende Literatur in Vers- oder Prosaform.</p>
+<h4>Definition</h4>
+<p>Unter dem Begriff “Epik” fasst man alle Formen erzählender Literatur zusammen. Ein epischer Text muss immer einen Erzähler haben, kann aber sowohl in Prosa als auch in Versen verfasst sein.</p>
+<h4>Formen der Epik</h4>
+<p>Kleinformen: Hier findest du kurze Geschichten, die nie länger als ein paar Seiten sind. Beispiele sind die Kurzgeschichte, das Märchen, die Fabel, die Sage, die Anekdote und die Ballade (die auch als Gedichtform existiert).</p>
+<p>Mittlere Formen: Diese Geschichten sind bis zu hundert Seiten lang und umfassen Werke wie die Novelle und die Erzählung.</p>
+<p>Großformen: Hier findest du sehr lange Texte, die teilweise mehrere hundert Seiten umfassen. Beispiele sind der Roman und das Epos (die erste Form erzählender Dichtung, ursprünglich in Versen verfasst und öffentlich vorgetragen).</p>
+<h4>Merkmale der Epik</h4>
+<p>Erzähltechnik: Autoren verwenden verschiedene Erzähltechniken, darunter Erzählberichte, direkte Rede und indirekte Rede, um ihre Geschichten spannender zu gestalten.</p>
+<h2>Der Schwank</h2>
+<p>Der Schwank ist eine epische Kurzform mit humoristischem Inhalt. Oftmals nimmt er eine höhergestellte Persönlichkeit auf den Arm und karikiert dummes Verhalten vermeintlich Überlegener. Dabei werden sie durch Witz und Gerissenheit einer sozial niedriger gestellten Person entlarvt. Formal wird der Schwank den Pointetypen zugeordnet, was ihn in die Nähe von Anekdote, Sagwort und Witz stellt. Interessanterweise teilen seine Charakteristika, wie die Komik als Entbindung des Unzulänglichen und die Lösung von Spannungen, eigentlich auch den Schwank aus. Diese literarische Gattung dient vor allem der geselligen Unterhaltung und zielt oft auf eine Pointe ab.</p>
+<h2>Die Satire</h2>
+<p>Satire ist eine literarische Form, die durch Übertreibungen, Spott und Ironie Personen, Ereignisse, Weltanschauungen oder gesellschaftliche Entwicklungen kritisiert.</p>
+<h4>Definition</h4>
+<p>Satire nutzt Humor, Ironie, Sarkasmus oder Spott, um etwas oder jemanden zu kritisieren. Oft sind öffentliche Persönlichkeiten, wie Politiker, das Ziel der Satire, aber auch andere Themen wie gesellschaftliche Konventionen oder Regierungspolitik können satirisch behandelt werden.</p>
+<h4>Literarische Geräte</h4>
+<p>atire geht oft Hand in Hand mit anderen literarischen Geräten wie Ironie, Malapropismus, Übertreibung, Untertreibung, Juxtaposition oder Parodie.</p>
+<h4>Beispiele</h4>
+<p>Satire kann in verschiedenen Formen auftreten, darunter satirische Romane, Gedichte, Essays, Filme, Shows und Cartoons. Ein bekanntes Beispiel ist Alec Baldwins Parodie auf Donald Trump in der Show "Saturday Night Live".</p>
+<h4>Genre vs. literarisches Gerät</h4>
+<p>Satire kann sowohl ein literarisches Gerät als auch ein spezifisches Genre sein. Während es viele satirische Romane und Werke gibt, kann Satire auch in anderen Arten von Schreiben und Kunst verwendet werden. Zum Beispiel wurde eine Produktion von Shakespeares “Julius Caesar” in New York City kritisiert, weil Caesar (der im Stück ermordet wird) in einem Anzug und einer roten Krawatte auftrat, die stark an die Standardkleidung von Präsident Donald Trump erinnerte. Obwohl das Stück “Julius Caesar” selbst keine Satire ist, fügte diese Kostümierung dem Stück eine satirische Note hinzu.</p>
