--- a/Deutsch/Barock/pole3.html
+++ b/Deutsch/Barock/pole3.html
@@ -1,3 +1,14 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="iframe.css">
-<p>Stefan stinkt.</p>
+<h2>Merkmale des Barocks</h2>
+<p>Der Barock war eine kunstgeschichtliche Epoche, die etwa von 1600 bis 1730 andauerte.</p>
+<h4>Dynamische Bewegungsformen in der Architektur</h4>
+<p>Im Gegensatz zur statischen Hochrenaissance bevorzugte der Barock bewegte Fassaden und Raumverschleifungen. Kirchen, Paläste und Gärten wurden oft mit leidenschaftlicher Bewegtheit gestaltet.</p>
+<h4>Betonung von Licht und Schatten</h4>
+<p>Barocke Kunst betonte den Kontrast zwischen Licht und Schatten. Dies spiegelte sich in Architektur, Malerei, Plastik und Dekorationskunst wider.</p>
+<h4>Plastische Modellierung</h4>
+<p>Figuren und Ornamente wurden betont plastisch gestaltet, anstatt flach zu wirken.</p>
+<h4>Illusionistische Tendenz</h4>
+<p>In der Malerei wurden perspektivisch täuschend echte Scheinarchitekturen gemalt. Auch Wand- und Deckenmalereien in Schlössern und Kirchen zeigten oft komplexe, bewegte Räume.</p>
+<h4>Gesamtkunstwerk</h4>
+<p>Barocke Kunst, Architektur und Kunsthandwerk durchdrangen sich gegenseitig. Die Gartenkunst, wie der “Französische Park”, blühte als ein vereinigendes Gesamtkunstwerk auf.</p>
