--- a/Deutsch/Barock/pole4.html
+++ b/Deutsch/Barock/pole4.html
@@ -1,3 +1,14 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="iframe.css">
-<p>Stefan stinkt.</p>
+<h2>Buch von der Dutschen Poetery (Opitz, 1624)</h2>
+<p>Martin Opitz' berühmtestes Werk, das 1624 veröffentlichte Buch von der Deutschen Poeterey, ist die richtungsweisende Poetik des deutschen Barock. In diesem Werk formuliert Opitz Regeln und Grundsätze einer neu zu begründenden hochdeutschen Dichtkunst</p>
+<h2>Tränen des Vaterlands (Gryphius, 1658)</h2>
+<p>“Tränen des Vaterlandes” ist ein berühmtes Sonett von Andreas Gryphius aus dem 17. Jahrhundert. Es beschreibt die verheerenden Folgen des Dreißigjährigen Krieges für das Heimatland. Gryphius verwendet den Alexandriner und ein abba-abba-ccd-eed-Reimschema, um seine Kritik und Trauer auszudrücken1. Das Gedicht ist fester Bestandteil des schulischen und universitären Kanons und wird immer wieder in Anthologien und Lesebüchern nachgedruckt.</p>
+<h2>Es ist alles eitel (Gryphius, 1637)</h2>
+<p>“Es ist alles eitel” ist ein Sonett des barocken Dichters Andreas Gryphius aus der Zeit des Dreißigjährigen Krieges. In diesem Gedicht beschreibt Gryphius die Vergänglichkeit von Menschen, Natur und Pracht. Der Titel nimmt die Einleitung des Buches Kohelet auf</p>
+<h2>Sonn- und Feiertagssonette (Gryphius, 1639)</h2>
+<p>Andreas Gryphius, ein deutscher Barockdichter, schrieb eine Sammlung von Sonn- und Feiertagssonetten. Diese Gedichte behandeln religiöse Themen und die Vergänglichkeit des Lebens.</p>
+<h2>Ibrahim (Lohenstein, 1650)</h2>
+<p>“Ibrahim” ist ein Trauerspiel des deutschen Barockdichters Daniel Casper von Lohenstein. Es entstand zwischen 1649 und 1650 und wurde später unter dem Titel “Ibrahim Bassa” veröffentlicht. Die Uraufführung fand während des Karnevals 1650 in Breslau statt. Das Drama behandelt historische und politische Themen im osmanischen Reich. Lohenstein war bekannt für seine türkischen Trauerspiele, die oft exotische Schauplätze und Figuren aufgriffen. </p>
+<h2>Cleopatra (Lohenstein, 1661)</h2>
+<p>Cleopatra ist ein Trauerspiel des deutschen Barockdichters Daniel Casper von Lohenstein. Es wurde erstmals 1661 in Breslau veröffentlicht.</p>
