--- a/Deutsch/Barock/help.html
+++ b/Deutsch/Barock/help.html
@@ -1,3 +1,14 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="iframe.css">
-<h2>Help</h2>
+<h2>Hilfe</h2>
+
+<!--<h2>Quellen</h2>
+<p>https://de.wikipedia.org/wiki/Paul_Gerhardt</p>
+<p>https://de.wikipedia.org/wiki/Anna_Rupertina_Fuchs</p>
+<p>https://de.wikipedia.org/wiki/Paul_Fleming</p>
+<p>https://de.wikipedia.org/wiki/Anton_Ulrich_von_Braunschweig-Wolfenb%C3%BCttel</p>
+<p>https://de.wikipedia.org/wiki/Jakob_B%C3%B6hme</p>
+<p>https://de.wikipedia.org/wiki/Sigmund_von_Birken</p>
+<p>https://de.wikipedia.org/wiki/Jakob_Bidermann</p>
+<p>https://de.wikipedia.org/wiki/Johann_Valentin_Andreae</p>
+<p>https://de.wikipedia.org/wiki/Epik</p>-->
