--- a/Deutsch/Barock/lowerBar.html
+++ b/Deutsch/Barock/lowerBar.html
@@ -1,3 +1,3 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="iframe.css">
-<p>Stefan stinkt.</p>
+Error occurred while trying to load necessary data!
