--- a/Deutsch/Barock/index.html
+++ b/Deutsch/Barock/index.html
@@ -57,7 +57,7 @@
 				</div>
 			</div>
 			<div id="lowerBar" onclick="lowerBar()">
-				<img src="lorem ipsum deine mutter" alt="Error occurred while trying to load the image!">
+				<img src="https://benjamin-braun.github.io/SchoolProjects/Deutsch/Barock/lowerbar.png" alt="Error occurred while trying to load the image!">
 			</div>
 		</div>
 		<script>
