--- a/Deutsch/Barock/lowerBar.html
+++ b/Deutsch/Barock/lowerBar.html
@@ -1,3 +1,8 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="iframe.css">
-Error occurred while trying to load necessary data!
+<h2>Der 30 Jährige Krieg</h2>
+<p>Der Dreißigjährige Krieg dauerte von 1618 bis 1648 und war ein verheerender Konflikt in Europa. Ursprünglich ein religiöser Konflikt in Böhmen, weitete er sich zu einem Territorialkrieg aus. Die Habsburger (Österreich und Spanien) kämpften gegen Frankreich, die Niederlande, Dänemark und Schweden. 4,5 bis 8 Millionen Menschen starben durch Krieg, Hunger oder Krankheiten. Der Krieg endete am 24. Oktober 1648 mit dem Westfälischen Frieden.</p>
+<h2>Tod von König Ludwig XIV</h2>
+<p>udwig XIV., auch bekannt als der “Sonnenkönig”, starb am 1. September 1715 in Schloss Versailles. Er war ein französischer Prinz aus dem Haus Bourbon und regierte von 1643 bis zu seinem Tod als König von Frankreich und Navarra sowie Kofürst von Andorra. Sein Tod wurde durch eine schwere Gangrän-Infektion in seinem linken Bein verursacht. Trotz medizinischer Behandlung und der Möglichkeit einer Amputation verschlechterte sich sein Zustand, und er verstarb schließlich. Mit einer Regentschaft von 72 Jahren war Ludwig XIV. einer der am längsten herrschenden Monarchen der europäischen Geschichte.</p>
+<h2>Der große nordische Krieg</h2>
+<p>er Große Nordische Krieg war ein in Nord-, Mittel- und Osteuropa zwischen 1700 und 1721 geführter Konflikt um die Vorherrschaft im Ostseeraum. Schweden kämpfte gegen eine Allianz aus Russland, Dänemark, Sachsen-Polen und weiteren Staaten. Dieser Krieg hatte weitreichende Folgen für die europäische Geschichte. Die beteiligten Mächte führten zahlreiche Schlachten und Belagerungen, und die Koalition unter russischer Führung konnte letztendlich die Vorherrschaft Schwedens erfolgreich herausfordern.</p>
