--- a/Deutsch/Barock/help.html
+++ b/Deutsch/Barock/help.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="iframe.css">
 <h2>Hilfe</h2>
+VERSION 0.8.2 - 20240613
 
 <!--<h2>Quellen</h2>
 <p>https://de.wikipedia.org/wiki/Paul_Gerhardt</p>
