--- a/Physik/DerPhysikus/index.html
+++ b/Physik/DerPhysikus/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="Refresh" content=0; url="https://benjamin-braun.github.io/SchoolProjects/Physik/DerPhysikus/game"/>
+<meta url="https://benjamin-braun.github.io/SchoolProjects/Physik/DerPhysikus/game" http-equiv="Refresh" content=0;/>
 <h1>Redirecting...</h1>
