--- a/Physik/DerPhysikus/index.html
+++ b/Physik/DerPhysikus/index.html
@@ -1,2 +1,3 @@
 <meta url="https://benjamin-braun.github.io/SchoolProjects/Physik/DerPhysikus/game" http-equiv="Refresh" content=0;/>
 <h1>Redirecting...</h1>
+<h2 href="https://benjamin-braun.github.io/SchoolProjects/Physik/DerPhysikus/game">If you don't get redirected automatically, click here</h2>
