--- a/Physik/DerPhysikus/index.html
+++ b/Physik/DerPhysikus/index.html
@@ -1,3 +1,2 @@
-<meta url="https://benjamin-braun.github.io/SchoolProjects/Physik/DerPhysikus/game" http-equiv="Refresh" content=0;/>
 <h1>Redirecting...</h1>
-<h2 href="https://benjamin-braun.github.io/SchoolProjects/Physik/DerPhysikus/game">If you don't get redirected automatically, click here</h2>
+<p>If you don't get redirected automatically, click <a href="https://benjamin-braun.github.io/SchoolProjects/Physik/DerPhysikus/game">here</a>.</p>
